--- a/ayucare-backend/package.json
+++ b/ayucare-backend/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +18,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.5.3",
-    "nodemon": "^2.0.19"
+    "langchain": "^0.0.180",
+    "mongoose": "^6.5.3"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@types/bcrypt": "^5.0.0",
+    "nodemon": "^3.0.1"
   }
 }
