--- a/ayucare/package.json
+++ b/ayucare/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.14.16",
+    "axios": "^1.6.0",
     "material-ui-chip-input": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
